--- a/dragon attack/style.css
+++ b/dragon attack/style.css
@@ -22,7 +22,7 @@ table td {
   text-align: center;
 }
 
-article {
+#article {
   margin-top: 50px;
   background-color: rgba(255, 255, 255, 0.1);
   padding: 30px;
